# realtime-doc-mcp

./: .gitignore  README.md
docs/: IMPLEMENTATION.md  SPECIFICATION.md
src/: app.py  client.py  client_cli.py  client_sse.py  client_sse_cli.py  pyproject.toml  server.py  server_sse.py
